syntax = "proto3";

// Пространство имен
option csharp_namespace = "StatisticService.API";

// Для поддержки времени
import "google/protobuf/timestamp.proto";
// Для поддержки nullable int'ов
import "google/protobuf/wrappers.proto";

// Название проекта
package statistic;


service Statistic {
    // Тест соединения
    rpc Ping(PingRequest) returns (PingResponse); 
    // Сохранение статистики
    rpc SaveStatistic (StatisticRequest) returns (StatisticResponse);
    // Получение статистики по Id
    rpc GetStatisticById (GetStatisticByIdRequest) returns (GetStatisticByIdResponse);
    // Получение списка доступных годов для статистики
    rpc GetAwailableYears(GetAwailableYearsRequest) returns(GetAwailableYearsResponse);
    // Получение годовой статистики
    rpc GetYearStatisic (YearStatisticRequest) returns (YearStatisticResponse);
    // Получение последних пройденных модулей
    rpc GetLastActivity (GetLastActivityRequest) returns (GetLastActivityResponse);
}

// Ping
message PingRequest{}
message PingResponse{
    string message = 1;
}

// SaveStatistic
message StatisticRequest {
    int32 moduleId = 1;
    int32 userId = 2;
    repeated StatisticElements elements = 3;
    google.protobuf.Timestamp completedAt = 4;
}

message StatisticElements{
    int32 elementId = 1;
    bool answer = 2;
}

message StatisticResponse {
    int32 id = 1;
}

// GetStatisticById
message GetStatisticByIdRequest{
    int32 id = 1;
}
message GetStatisticByIdResponse{
    int32 percentSuccess = 1;
    int32 numberOfAttempts = 2;
    google.protobuf.Timestamp completedAt = 3;
}


// GetAwailableYears
message GetAwailableYearsRequest{
    int32 userId = 1;
}

message GetAwailableYearsResponse{
    repeated int32 awailableYears = 1;
}


// GetYearStatisic
message YearStatisticRequest{
    int32 userId = 1;
    int32 year = 2;
}

message YearStatisticResponse{
    int32 year = 1;
    int32 numberOfActions = 2;
    int32 activeDays = 3;
    int32 maximumSeries = 4;
    repeated int32 colspan = 5;
    repeated YearStatisticRow Data = 6; // Массив массивов
}

message YearStatisticRow {       
    repeated YearStatisticModel values = 1;
}

message YearStatisticModel{
    google.protobuf.Timestamp date = 1;
    google.protobuf.Int32Value value = 2;
}

// GetLastActivity
message GetLastActivityRequest{
    int32 userId = 1;
}
message GetLastActivityResponse{
    repeated GetLastActivityModel Data = 1;
}
message GetLastActivityModel{
    int32 ModuleId = 1;
    google.protobuf.Timestamp CompletedAt = 2;
}


